--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "author": "h3x3d",
   "dependencies": {
     "babel-eslint": "^6.0.4",
-    "eslint-config-airbnb": "^8.0.0"
+    "eslint-config-airbnb": "^8.0.0",
+    "eslint-plugin-jsx-a11y": "^1.2.0",
+    "eslint-plugin-import": "^1.7.0",
+    "eslint-plugin-react": "^5.1.1"
   },
   "peerDependencies": {
     "eslint": ">=2.0.0"
