--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "1.0.0",
   "author": "h3x3d",
   "dependencies": {
-    "babel-eslint": "^6.0.4",
-    "eslint-config-airbnb": "^8.0.0",
-    "eslint-plugin-jsx-a11y": "^1.2.0",
-    "eslint-plugin-import": "^1.7.0",
-    "eslint-plugin-react": "^5.1.1"
+    "babel-eslint": "^6.1.2",
+    "eslint-config-airbnb": "^11.1.0",
+    "eslint-plugin-import": "^1.15.0",
+    "eslint-plugin-jsx-a11y": "^2.2.2",
+    "eslint-plugin-react": "^6.2.1"
   },
   "peerDependencies": {
-    "eslint": ">=2.0.0"
+    "eslint": "^3.5.0"
   }
 }
