--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "dependencies": {
     "babel-eslint": "^6.1.2",
     "eslint-config-airbnb": "^11.1.0",
+    "eslint-plugin-babel": "^3.3.0",
     "eslint-plugin-import": "^1.15.0",
     "eslint-plugin-jsx-a11y": "^2.2.2",
-    "eslint-plugin-react": "^6.2.1"
+    "eslint-plugin-react": "^6.3.0"
   },
   "peerDependencies": {
     "eslint": "^3.5.0"
