--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "author": "h3x3d",
   "dependencies": {
     "eslint-config-airbnb": "^12.0.0",
+    "eslint-plugin-import": "^2.0.1",
+    "eslint-plugin-jsx-a11y": "^2.2.3",
     "eslint-plugin-react": "^6.3.0"
   },
   "peerDependencies": {
